--- a/sources/integration-test/src/test/resources/common/storage-default-offer.conf
+++ b/sources/integration-test/src/test/resources/common/storage-default-offer.conf
@@ -5,3 +5,7 @@ mongoDbNodes:
   - dbHost: localhost
     dbPort: 12346
 dbName: vitam-test
+offerLogCompaction:
+  expirationValue: 1
+  expirationUnit: MILLIS
+  compactionSize: 1000
