--- a/sources/storage-integration-multi-offers/src/test/resources/storage-test/storage-default-offer-ssl.conf
+++ b/sources/storage-integration-multi-offers/src/test/resources/storage-test/storage-default-offer-ssl.conf
@@ -5,3 +5,7 @@ mongoDbNodes:
   - dbHost: localhost
     dbPort: 12346
 dbName: vitamoffer1
+offerLogCompaction:
+  expirationValue: 21
+  expirationUnit: DAYS
+  compactionSize: 10000
