--- a/sources/storage-integration-nossl-test/src/test/resources/storage-test/storage-default-offer-nossl.conf
+++ b/sources/storage-integration-nossl-test/src/test/resources/storage-test/storage-default-offer-nossl.conf
@@ -4,3 +4,7 @@ mongoDbNodes:
   - dbHost: localhost
     dbPort: 12346
 dbName: Vitam
+offerLogCompaction:
+  expirationValue: 21
+  expirationUnit: DAYS
+  compactionSize: 10000
