--- a/vitam-conf-dev/conf/offer/offer.conf
+++ b/vitam-conf-dev/conf/offer/offer.conf
@@ -11,4 +11,7 @@ dbName: offer
 dbAuthentication: true
 dbUserName: offer
 dbPassword: azerty5
-
+offerLogCompaction:
+  expirationValue: 21
+  expirationUnit: DAYS
+  compactionSize: 10000
