--- a/deployment/environments/group_vars/all/offers_opts.yml
+++ b/deployment/environments/group_vars/all/offers_opts.yml
@@ -1,6 +1,6 @@
 # This is the default vitam strategy ('default'). It is mandatory and must define a referent offer.
 # This list of offers is ordered. It can and has to be completed if more offers are necessary
-# Strategy order (1st has to be the prefered one)
+# Strategy order (1st has to be the preferred one)
 vitam_strategy:
   - name: offer-fs-1
     referent: true
@@ -45,8 +45,24 @@ vitam_offers:
   offer-fs-1:
     # param can be filesystem-hash (recomended) or filesystem (not recomended)
     provider: filesystem-hash
+    # Offer log compaction
+    offer_log_compaction:
+      ## Expiration, here offer logs 21 days old will be compacted
+      expiration_value: 21
+      ## Choose one of "MILLENNIA", "HALF_DAYS", "MILLIS", "FOREVER", "MICROS", "CENTURIES", "DECADES", "YEARS", "DAYS", "SECONDS", "HOURS", "MONTHS", "WEEKS", "NANOS", "MINUTES", "ERAS"
+      expiration_unit: "DAYS"
+      ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
+      compaction_size: 10000
   offer-tape-1:
     provider: tape-library
+    # Offer log compaction
+    offer_log_compaction:
+      ## Expiration, here offer logs 21 days old will be compacted
+      expiration_value: 21
+      ## Choose one of "MILLENNIA", "HALF_DAYS", "MILLIS", "FOREVER", "MICROS", "CENTURIES", "DECADES", "YEARS", "DAYS", "SECONDS", "HOURS", "MONTHS", "WEEKS", "NANOS", "MINUTES", "ERAS"
+      expiration_unit: "DAYS"
+      ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
+      compaction_size: 10000
   offer-swift-1:
     # provider : openstack-swift for v1 or openstack-swift-v3 for v3
     provider: openstack-swift-v3
@@ -76,6 +92,16 @@ vitam_offers:
 
     #Time (in seconds) to renew a token before expiration occurs
     swiftSoftRenewTokenDelayBeforeExpireTime: 300
+
+    # Offer log compaction
+    offer_log_compaction:
+      ## Expiration, here offer logs 21 days old will be compacted
+      expiration_value: 21
+      ## Choose one of "MILLENNIA", "HALF_DAYS", "MILLIS", "FOREVER", "MICROS", "CENTURIES", "DECADES", "YEARS", "DAYS", "SECONDS", "HOURS", "MONTHS", "WEEKS", "NANOS", "MINUTES", "ERAS"
+      expiration_unit: "DAYS"
+      ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
+      compaction_size: 10000
+
   # example_offer-s3-1:
   #   # provider : can only be amazon-s3-v1 for Amazon SDK S3 V1
   #   provider: 'amazon-s3-v1'
@@ -99,6 +125,14 @@ vitam_offers:
   #   s3RequestTimeout: 0
   #   # s3ClientExecutionTimeout (optional): Max time (in milliseconds) for a request by java client (0 by default, disabled)
   #   s3ClientExecutionTimeout: 0
+  #   # Offer log compaction
+  #   offer_log_compaction:
+  #     ## Expiration, here offer logs 21 days old will be compacted
+  #     expiration_value: 21
+  #     ## Choose one of "MILLENNIA", "HALF_DAYS", "MILLIS", "FOREVER", "MICROS", "CENTURIES", "DECADES", "YEARS", "DAYS", "SECONDS", "HOURS", "MONTHS", "WEEKS", "NANOS", "MINUTES", "ERAS"
+  #     expiration_unit: "DAYS"
+  #     ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
+  #     compaction_size: 10000
 
   # example_swift_v1:
   #    provider: openstack-swift
