--- a/sources/storage/cas-manager/vitam-offer/src/test/resources/storage-default-offer.conf
+++ b/sources/storage/cas-manager/vitam-offer/src/test/resources/storage-default-offer.conf
@@ -4,3 +4,7 @@ mongoDbNodes:
   - dbHost: localhost
     dbPort: 12346
 dbName: Vitam
+offerLogCompaction:
+  expirationValue: 21
+  expirationUnit: DAYS
+  compactionSize: 10000
