--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -209,7 +209,10 @@
         <diffutils.version>1.3.0</diffutils.version>
         <jaxb2.version>1.0.2</jaxb2.version>
         <jaxb.version>2.3.2</jaxb.version>
-        <httpclient.version>4.5.12</httpclient.version>
+        <!--
+            Http client 4.5.8 to 4.5.12 seams to have a prb with URI encoding that is incompatible with rest assured 4.2.0
+        -->
+        <httpclient.version>4.5.7</httpclient.version>
         <netty.version>4.1.45.Final</netty.version>
         <commons-compress.version>1.19</commons-compress.version>
         <easystream.version>1.2.15</easystream.version>
