--- a/vitam-conf-dev/conf/ihm-recette/ihm-recette.conf
+++ b/vitam-conf-dev/conf/ihm-recette/ihm-recette.conf
@@ -37,6 +37,13 @@ elasticsearchNodes:
 - hostName: localhost
   httpPort: 9200
 
+# ElasticSearch External Mapping
+elasticsearchExternalMetadataMappings:
+- collection: Unit
+  mappingFile: deployment/ansible-vitam/roles/elasticsearch-mapping/files/unit-es-mapping.json
+- collection: ObjectGroup
+  mappingFile: deployment/ansible-vitam/roles/elasticsearch-mapping/files/unit-es-mapping.json
+
 workspaceUrl: http://workspace.service.consul:8201/
 
 # Functional Admin Configuration
