--- a/vitam-conf-dev/conf/metadata/metadata.conf
+++ b/vitam-conf-dev/conf/metadata/metadata.conf
@@ -32,6 +32,12 @@ elasticsearchNodes:
 - hostName: localhost
   httpPort: 9200
 
+elasticsearchExternalMetadataMappings:
+- collection: Unit
+  mappingFile: deployment/ansible-vitam/roles/elasticsearch-mapping/files/unit-es-mapping.json
+- collection: ObjectGroup
+  mappingFile: deployment/ansible-vitam/roles/elasticsearch-mapping/files/og-es-mapping.json
+
 #Basic Authentication
 adminBasicAuth:
 - userName: adminUser
