fix path traversal for offer without storagePath. Better fix than ansible quickfix but need more to do later

--- a/sources/storage-integration-multi-offers/src/test/resources/storage-test/storage-default-offer-ssl.conf
+++ b/sources/storage-integration-multi-offers/src/test/resources/storage-test/storage-default-offer-ssl.conf
@@ -1,5 +1,6 @@
 storagePath: ./offer
 jettyConfig: storage-test/jetty-default-offer-config-test-ssl.xml
+provider: filesystem
 authentication : true
 mongoDbNodes:
   - dbHost: localhost
