--- a/sources/storage-integration-multi-offers/src/test/resources/storage-test/storage-default-offer2-ssl.conf
+++ b/sources/storage-integration-multi-offers/src/test/resources/storage-test/storage-default-offer2-ssl.conf
@@ -1,5 +1,6 @@
 storagePath: ./offer2
 jettyConfig: storage-test/jetty-default-offer2-config-test-ssl.xml
+provider: filesystem
 authentication : true
 mongoDbNodes:
   - dbHost: localhost
