--- a/sources/storage-integration-test/src/test/resources/storage-test/storage-default-offer-ssl.conf
+++ b/sources/storage-integration-test/src/test/resources/storage-test/storage-default-offer-ssl.conf
@@ -1,4 +1,5 @@
 jettyConfig: storage-test/jetty-default-offer-config-test-ssl.xml
+provider: filesystem
 authentication : true
 mongoDbNodes:
   - dbHost: localhost
