--- a/deployment/ansible-vitam/roles/checks/tasks/check_ip.yml
+++ b/deployment/ansible-vitam/roles/checks/tasks/check_ip.yml
@@ -2,10 +2,10 @@
 
 - name: Check if ip_admin network var is set
   fail:
-    msg: "ip_admin var must be set under {{ inventory_dir }}/hostvars/{{ inventory_hostname }}"
+    msg: "ip_admin var must be set under {{ inventory_dir }}/host_vars/{{ inventory_hostname }}"
   when: ip_admin is undefined
 
 - name: Check if ip_service network var is set
   fail:
-    msg: "ip_service var must be set under {{ inventory_dir }}/hostvars/{{ inventory_hostname }}"
+    msg: "ip_service var must be set under {{ inventory_dir }}/host_vars/{{ inventory_hostname }}"
   when: ip_service is undefined
