--- a/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/init_ontologies.yml
+++ b/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/init_ontologies.yml
@@ -5,7 +5,7 @@
     - name: Get current ontologies if any
       uri:
         method: GET
-        body: "{ \"$query\":{\"$eq\":{\"Identifier\":\"AcquiredDate\"}},\"$filter\":{},\"$projection\":{} }"
+        body: "{ \"$query\":{},\"$filter\":{},\"$projection\":{} }"
         status_code: 200
         url: "http://{{ hostvars[groups['hosts_functional_administration'][0]]['ip_admin'] }}:{{ vitam.functional_administration.port_admin }}/v1/admin/ontologies"
         body_format: "json"
