cherry pick 6490 on R9

--- a/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/init_ontologies.yml
+++ b/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/init_ontologies.yml
@@ -3,7 +3,7 @@
 - name: Check if ontologies already exist in functional-admin
   uri:
     method: GET
-    body: "{ \"$query\":{\"$eq\":{\"Identifier\":\"AcquiredDate\"}},\"$filter\":{},\"$projection\":{} }"
+    body: "{ \"$query\":{},\"$filter\":{},\"$projection\":{} }"
     status_code: 200
     url: "http://{{hostvars[groups['hosts-functional-administration'][0]]['ip_admin']}}:{{vitam.functional_administration.port_admin}}/v1/admin/ontologies"
     body_format: "json"
