--- a/deployment/ansible-vitam-extra/roles/ihm-recette-data-sets/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/ihm-recette-data-sets/tasks/main.yml
@@ -11,6 +11,8 @@
     - test-data/performance
     - test-data/system
 
+- import_tasks: compute_offers.yml
+
 - name: copy file for driver in data
   template:
     src: "fr.gouv.vitam.storage.offers.workspace.driver.DriverImpl"
