Added profile_tasks to get tasks timings & more global timings

--- a/deployment/ansible.cfg
+++ b/deployment/ansible.cfg
@@ -4,3 +4,4 @@ roles_path = ansible-vitam/roles
 hash_behaviour = merge
 filter_plugins = library/filter_plugins
 library = library/modules
+callback_whitelist = profile_tasks
