Fix docker compose openio restart : add ip in env

--- a/vitam-conf-dev/tests/docker-compose.yml
+++ b/vitam-conf-dev/tests/docker-compose.yml
@@ -46,6 +46,7 @@ services:
     image: openio/sds:18.10
     environment:
       - REGION=us-west-1
+      - OPENIO_IPADDR=127.0.0.1
     ports:
       - "127.0.0.1:6007:6007"
 
