--- a/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/delete_certificates_contexts_security_profile.yml
+++ b/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/delete_certificates_contexts_security_profile.yml
@@ -6,7 +6,7 @@
     status_code: 200,201
     url: "http://{{ hostvars[groups['hosts_functional_administration'][0]]['ip_admin'] }}:{{ vitam.functional_administration.port_admin }}/v1/admin/contexts"
     body_format: "json"
-    body: "[{ \"Name\": \"*\", \"SecurityProfile\": \"{{ admin_security_profile }}\"}]"
+    body: "{ \"$query\":{\"$eq\":{\"SecurityProfile\":\"{{ admin_security_profile }}\"}},\"$filter\":{},\"$projection\":{} }"
     headers:
       Accept: application/json
       X-Tenant-Id: "{{ vitam_tenant_admin }}"
