--- a/deployment/ansible-vitam/roles/vitam/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/tasks/main.yml
@@ -29,6 +29,8 @@
 - import_tasks: tape_offer.yml
 
 - import_tasks: compute_offers.yml
+  tags:
+    - update_vitam_configuration
 
 # state: latest to handle snapshot versions
 - name: Install {{ package_name }} package
