Item 6679 rename MetricsJersey to MetricsRest

--- a/sources/integration-test/src/test/resources/vitam.metrics.conf
+++ b/sources/integration-test/src/test/resources/vitam.metrics.conf
@@ -20,16 +20,12 @@
 #  	- 0.0.0.0:80
 #  	- 8.8.8.8:22
 
-{% if (groups['hosts_elasticsearch_log'] | length) > 0  %}
 metricsRest: true
 metricsJVM: true
 
 metricReporter: ELASTICSEARCH
 metricReporterHosts:
-{% for host in groups['hosts_elasticsearch_log'] %}
-   - "{{ hostvars[host]['ip_admin'] }}:{{ elasticsearch.log.port_http }}"
-{% endfor %}
-metricLogLevel: {{ vitam_struct.metricslevel|default('DEBUG') }}
-metricReporterInterval: {{ vitam_struct.metricsinterval|default('3') }}
-metricReporterIntervalUnit: {{ vitam_struct.metricsunit|default('MINUTES') }}
-{% endif %}
+  - "127.0.0.1:9200"
+metricLogLevel: DEBUG
+metricReporterInterval: 3
+metricReporterIntervalUnit: MINUTES
