--- a/sources/common/common-private/src/test/resources/vitam.metrics.conf
+++ b/sources/common/common-private/src/test/resources/vitam.metrics.conf
@@ -2,7 +2,7 @@
 #
 #  Les différents clés disponibles pour ce fichier de configuration sont les suivantes :
 #
-#  metricsJersey: true / false	Active ou non les métriques Jersey
+#  metricsRest: true / false	Active ou non les métriques Jersey
 #  metricsJVM: true / false	Active ou non les métriques JVM
 #
 #  metricReporter: ELASTICSEARCH | LOGBACK | NONE			défini le type de reporter
@@ -20,7 +20,7 @@
 #  	- 0.0.0.0:80
 #  	- 8.8.8.8:22
 
-metricsJersey: true
+metricsRest: true
 metricsJVM: true
 
 metricReporter: LOGBACK
