--- a/vitam-conf-dev/conf/access-external/vitam.metrics.conf
+++ b/vitam-conf-dev/conf/access-external/vitam.metrics.conf
@@ -2,7 +2,7 @@
 #
 #  Les différents clés disponibles pour ce fichier de configuration sont les suivantes :
 #
-#  metricsJersey: true / false	Active ou non les métriques Jersey
+#  metricsRest: true / false	Active ou non les métriques Jersey
 #  metricsJVM: true / false	Active ou non les métriques JVM
 #
 #  metricReporter: ELASTICSEARCH | LOGBACK | NONE			défini le type de reporter
