6420 : add TextContent to Tesseract When extract AU

--- a/deployment/ansible-vitam/roles/elasticsearch-mapping/files/unit-es-mapping.json
+++ b/deployment/ansible-vitam/roles/elasticsearch-mapping/files/unit-es-mapping.json
@@ -162,6 +162,9 @@
     "Tag": {
       "type": "keyword"
     },
+    "TextContent": {
+      "type": "text"
+    },
     "Title": {
       "type": "text",
       "fielddata": true
