--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -190,6 +190,7 @@
         <commons-logging.version>1.2</commons-logging.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-lang3>3.9</commons-lang3>
+        <commons-text>1.8</commons-text>
         <easymock.version>4.0.2</easymock.version>
         <jackson.version>2.10.2</jackson.version>
         <apache-shiro.version>1.5.0</apache-shiro.version>
@@ -1279,6 +1280,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-text</artifactId>
+                <version>${commons-text}</version>
             </dependency>
             <dependency>
                 <groupId>net.sf.jsignature.io-tools</groupId>
