Item 6719 register prometheus node exporter in consul

--- a/deployment/ansible-vitam/roles/prometheus-node-exporter/handlers/main.yml
+++ b/deployment/ansible-vitam/roles/prometheus-node-exporter/handlers/main.yml
@@ -1,6 +1,11 @@
 ---
 
 # handlers file for common
+- name: reload consul configuration
+  service:
+    name: vitam-consul
+    state: reloaded
+
 - name: restart prometheus node exporter
   service:
     name: vitam-node-exporter
