Item 6619 : Add removed tenant list in ansible configuration

--- a/deployment/environments/group_vars/all/tenants_vars.yml
+++ b/deployment/environments/group_vars/all/tenants_vars.yml
@@ -1,5 +1,9 @@
 ### tenants ###
+# List of active tenants
 vitam_tenant_ids: [0,1,2,3,4,5,6,7,8,9]
+# List of dead / removed tenants that should never be reused / present in vitam_tenant_ids
+vitam_removed_tenants: []
+# Administration tenant
 vitam_tenant_admin: 1
 
 ###
