--- a/deployment/ansible-vitam-extra/roles/loadTNR/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/loadTNR/tasks/main.yml
@@ -55,11 +55,11 @@
   args:
     chdir: "{{ TNR_conf }}"
   run_once: true
-  when: TNR_TAGS ==''
+  when: TNR_TAGS == 'null'
 
 - name: launch TNR by tag
   include_tasks: "tnr_by_tag.yml"
-  when: TNR_TAGS != ''
+  when: TNR_TAGS != 'null'
 
 - name: get back TNR output file {{ TNR_output }}
   fetch:
