final fix expression append

--- a/deployment/ansible-vitam-extra/roles/loadTNR/tasks/tnr_by_tag.yml
+++ b/deployment/ansible-vitam-extra/roles/loadTNR/tasks/tnr_by_tag.yml
@@ -14,7 +14,7 @@
   
   - name: Read and append line
     set_fact: 
-      TNR_STRING: "{{ TNR_STRING }} + [ '{{TNR_TOKEN}} {{item}}' ]"
+      TNR_STRING: "{{ TNR_STRING +' '+ TNR_TOKEN +' '+ item }}"
     with_items: "{{ split_lines | list }}"
 
   - debug:
