Item 6719 prometheus server and alertmanager

--- a/deployment/environments/group_vars/all/cots_vars.yml
+++ b/deployment/environments/group_vars/all/cots_vars.yml
@@ -168,7 +168,8 @@ prometheus:
         url_path: /metrics
     alertmanager:
         enabled: true
-        port: 19093
+        api_port: 19093
+        cluster_port: 19094
 
 # Curator units: days
 curator:
